gpgconf: Suggest the use of --gpgconf-test on --launch problems.

* tools/gpgconf-comp.c (gc_component_launch): Change suggestion.
--

GnuPG-bug-id: 4668
Signed-off-by: Werner Koch <wk@gnupg.org>
(cherry picked from commit 2a45800b2f8043d2533403eaadf8736d15ad7017)