tools/gpgconf-comp.c
@@ -1279,7 +1279,7 @@ gc_component_launch (int component)
                  gc_component[component].name);
       if (!opt.quiet)
         log_info (_("Note: Use the command \"%s%s\" to get details.\n"),
-                  "gpgconf --check-options ", gc_component[component].name);
+                  gc_component[component].name, " --gpgconf-test");
       gpgconf_failure (0);
     }
 
